# rustvlan

./: README.md  metadata.json  package-lock.json  package.json  server.ts  standalone-server.js
rust-client/: Cargo.toml  README.md
rust-client/src/: main.rs
src/: App.tsx  index.css  rustAgentCode.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: InstructionTab.tsx  VirtualLANEngine.tsx
