[package]
name = "rustnet-client"
version = "0.1.0"
edition = "2021"
description = "RustNet P2P Virtual LAN Native Terminal Tunnel Client"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
