[package]
name = "rustnet"
version = "0.1.0"
description = "RustNet P2P Virtual LAN Tunnel Client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
